--- a/index.html
+++ b/index.html
@@ -72,47 +72,83 @@
   
   <!-- "what we do" section -->
   <section id="what-we-do" class="intro">
+    <div class="flex-row">
     <h2 class="section-title primary-border">What We Do</h2>
+  </div>
+<div class="flex-row">
     <p>
       Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sequi neque animi quo cupiditate commodi saepe culpa sed
       itaque velit maiores optio dolorem excepturi aperiam dolores, voluptatibus suscipit amet quis repellat!
     </p>
+  </div>
   </section>
   
   <!-- "what you do" section -->
   <section id="what-you-do" class="steps">
+    <div class="flex-row">
     <h2 class="section-title primary-border">
-      What You Do</h2>
-
-    <div>
-      <img src="./assets/pictures/step-1.svg" alt="" />
-      <h3>Step 1: <span>Fill Out the Form Above.</span></h3>
-      <p>You're already here, so why not?</p>
+      What You Do
+    </h2>
     </div>
+      <div class="step">
+        <h3>Step 1.</h3>
+        <div class="step-info">
+          <div class="step-img">
+            <img src="./assets/pictures/step-1.svg" alt="" />
+          </div>
+          <div class="step-text">
+            <h4>Fill Out The Form Above</h4>
+            <p>You're already here, so why not?</p>
+          </div>
+        </div>
+      </div>
   
-    <div>
-      <img src="./assets/pictures/step-2.svg" alt="" />
-      <h3>Step 2: <span>Consult with One of Our Trainers.</span></h3>
-      <p>Are you here to build muscle, lose weight, or just feel good?</p>
-    </div>
+      <div class="step">
+        <h3>Step 2.</h3>
+        <div class="step-info">
+          <div class="step-img">
+            <img src="./assets/pictures/step-2.svg" alt="">
+          </div>
+          <div class="step-text">
+            <h4>Consult With One Of Our Trainers</h4>
+            <p>Are you here to build muscle, lose weight, or just feel good?</p>
+          </div>
+        </div>
+      </div>
   
-    <div>
-      <img src="./assets/pictures/step-3.svg" alt="" />
-      <h3>Step 3: <span>Get Running.</span></h3>
-      <p>Hit the ground running (literally) once your trainer lays out your plan.</p>
-    </div>
+      <div class="step">
+        <h3>Step 3.</h3>
+        <div class="step-info">
+          <div class="step-img">
+            <img src="./assets/pictures/step-3.svg" alt="">
+          </div>
+          <div class="step-text">
+            <h4>Get Running</h4>
+            <p>Hit the ground running (literally) once your trainer lays out your plan.</p>
+          </div>
+        </div>
+      </div>
   
-    <div>
-      <img src="./assets/pictures/step-4.svg" alt="" />
-      <h3>Step 4: <span>See Results.</span></h3>
-      <p>Bi-weekly checkins with your trainer will keep you focused</p>
-    </div>
-  </section>
+      <div class="step">
+        <h3>Step 4.</h3>
+        <div class="step-info">
+          <div class="step-img">
+           <img src="./assets/pictures/step-4.svg" alt="">
+          </div>
+          <div class="step-text">
+            <h4>See Results</h4>
+            <p>Bi-weekly checkins with your trainer will keep you focused</p>
+          </div>
+        </div>
+      </div>
+    </section>
   
 <!--Trainer-1 Arron Bio -->
   <section id="your-trainers" class="trainers">
+  <div class="flex-row">
     <h2 class="section-title primary-border">
       Meet The Trainers</h2>
+  </div>
       <article class="trainer">
         <img src="./assets/pictures/trainer-1.jpg" alt="Arron Stephens in his workout clothes, ready to pump iron">
         <div class="trainer-bio text-left">
@@ -149,7 +185,9 @@
   
   <!-- "reach out" section -->
   <section id="reach-out" class="contact">
+  <div class="flex-row">
     <h2 class="section-title secondary-border">Reach Out</h2>
+  </div>
     <div class="contact-info">
        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1713.7121048717145!2d16.89772431661297!3d64.56281308791795!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x467a0b87589de9ad%3A0x38f8178d8bc31c65!2sDalasj%C3%B6%2056%2C%20912%2090%20Vilhelmina%2C%20Sweden!5e0!3m2!1sen!2sde!4v1623441000380!5m2!1sen!2sde"
        style="border:0;" 
