--- a/index.html
+++ b/index.html
@@ -145,11 +145,12 @@
   
 <!--Trainer-1 Arron Bio -->
 <section id="your-trainers">
-  <div class="trainers">
   <div class="flex-row">
     <h2 class="section-title primary-border">
       Meet The Trainers</h2>
   </div>
+
+    <div class="trainers">
       <article class="trainer">
         <img src="./assets/pictures/trainer-1.jpg" alt="Arron Stephens in his workout clothes, ready to pump iron">
         <div class="trainer-bio">
@@ -160,6 +161,7 @@
           </p>
         </div>
       </article>
+
   <!--Trainer-2 Joanna Bio-->
       <article class="trainer">
         <img src="./assets/pictures/trainer-2.jpg" alt="Joanna Gill cooling off after a workout">
@@ -171,6 +173,7 @@
           </p>
         </div>
       </article>
+
       <!--Trainer-3 Harry Bio-->   
       <article class="trainer">
         <img src="./assets/pictures/trainer-3.jpg" alt="Harry Smith wearing a headband and lifting comically small pink weights">
@@ -187,33 +190,20 @@
 
   <!-- "reach out" section -->
   <section id="reach-out" class="contact">
-  <div class="flex-row">
-    <h2 class="section-title secondary-border">Reach Out</h2>
-  </div>
-    <div class="contact-info">
-       <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1713.7121048717145!2d16.89772431661297!3d64.56281308791795!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x467a0b87589de9ad%3A0x38f8178d8bc31c65!2sDalasj%C3%B6%2056%2C%20912%2090%20Vilhelmina%2C%20Sweden!5e0!3m2!1sen!2sde!4v1623441000380!5m2!1sen!2sde"
-       style="border:0;" 
-       allowfullscreen=""
-       loading="lazy">
-      </iframe>
-      <div class="contact-form">
-        <h3>Contact Us</h3>
-        <form action="">
-          <label for="contact-name">Your Name</label>
-          <input type="text" id="contact-name" placeholder="Your Name">
+    <div class="flex-row">
+      <h2 class="section-title secondary-border">
+        Reach Out
+      </h2>
+    <div>
 
-          <label for="contact-message">Message</label>
-          <textarea id="contact-message" placeholder="Message"></textarea>
-
-          <button type="submit">Submit</button>
-        </form>
-      </div>
+  <div class="contact-info">
     <div>
       <h3>Run Buddy</h3>
       <p>Any questions or concerns before signing up?
         <br />
         Let us know and we'll be happy to talk to you!
       </p>
+
       <address>
         55 Main Street <br/>
         Some Town, CA <br/>
@@ -221,7 +211,26 @@
         P: 555.RUN.BUDZ (555.786,2839) <br/>
         E: <a href="mailto:info@runbuddy.io">info@runbuddy.io</a>
       </address>
+    
     </div>
+
+    <div class="contact-form">
+      <h3>Contact Us</h3>
+      <form action="">
+        <label for="contact-name">Your Name</label>
+        <input type="text" id="contact-name" placeholder="Your Name">
+
+        <label for="contact-message">Message</label>
+        <textarea id="contact-message" placeholder="Message"></textarea>
+
+        <button type="submit">Submit</button>
+      </form>
+    </div>
+
+    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1713.7121048717145!2d16.89772431661297!3d64.56281308791795!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x467a0b87589de9ad%3A0x38f8178d8bc31c65!2sDalasj%C3%B6%2056%2C%20912%2090%20Vilhelmina%2C%20Sweden!5e0!3m2!1sen!2sde!4v1623441000380!5m2!1sen!2sde"
+    style="border:0;" 
+    allowfullscreen=""
+    loading="lazy"> </iframe>
     </div>
   </section>
   
